# Copytyping-dev

./: .gitignore  CLAUDE.md  README.md  environment.yaml  pyproject.toml
analysis/: analysis_plots.py  pipeline.py  plot_umap.py  sx_data.py  validate.py
example/: sample.tsv
scripts/: run_copytyping_pipeline.sh
simulations/: README.md  evaluate_simulation.py  simulate_atac.py  simulate_visium.py
src/copytyping/: __main__.py  copytyping.yaml  copytyping_parser.py  external.py  io_utils.py  likelihoods.py  pipeline.py  utils.py
src/copytyping.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/copytyping/cnphmm_inference/: cnt_clustering.py  data_io.py  emissions.py  forward_backward.py  inference.py  initialize.py  optimize.py  output.py  plots.py  segmentation.py  states.py  viterbi.py
src/copytyping/combine_counts/: combine_counts.py  combine_counts_utils.py
src/copytyping/inference/: base_model.py  cell_model.py  clustering.py  count_data.py  inference.py  inference_utils.py  likelihood_funcs.py  likelihoods.py  model_utils.py  spot_model.py  validation.py
src/copytyping/joint_inference/: bulk_cnp_anchored_copytyping.py  cnp_copytyping.py  emissions.py  inference.py  initialize.py  io.py  optimize.py  segmentation.py  tmp_funcs.py
src/copytyping/plot/: plot_cell.py  plot_clone_diagnostic.py  plot_cnp.py  plot_common.py  plot_copynumber.py  plot_heatmap.py  plot_modality.py  plot_scatter_1d.py  plot_scatter_2d.py  plot_spatial.py  (+2 more)
tests/: conftest.py  test_cell_model.py  test_likelihood_funcs.py  test_model_utils.py  test_sx_data.py
(+7 files in other folders)
