[project]
name = "copytyping"
version = "0.0.1"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "pyranges",
    "pysam",
    "PyYAML",
    "scanpy",
    "scikit-learn",
    "scipy",
    "seaborn",
    "squidpy",
    "statsmodels",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
copytyping = "copytyping.__main__:main"
